--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                    Mi primeros cambios <br> en github
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Aun me siento un poco perdido con los comandos pero trato de seguir las instrucciones de los contenidos brindados. Estoy llenando aca con cualquier cosa para representar cambios en mi archivo.
+                    Creo ya ser suficiente. Good luck!
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
