--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <p class="my-5">
                     Aun me siento un poco perdido con los comandos pero trato de seguir las instrucciones de los contenidos brindados. Estoy llenando aca con cualquier cosa para representar cambios en mi archivo.
                     Creo ya ser suficiente. Good luck!
+                    
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
@@ -74,26 +75,22 @@
             earum itaque cum sequi, dolorem optio vol
         </p>
 
-
+        <!--Hice un cambio de texto en el <p> para probar el commit-->
         <div class="row">
             <div class="col-12 col-md-4">
                 <i class="fas fa-camera fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    A mi punto de vista ninguna fotografía tomada por un fotógrafo "profesional" es mala, todo depende del contexto del por qué estamos tomando la foto o del punto de vista con que queremos ver la fotografía. Porque la realidad puede ser que para una persona una fotografía "borrosa", "muy oscura" o "muy blanca" es mala, para otra persona puede ser una excelente fotografía incluso hasta muy artística por la técnica.
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+               <!--Agregué un nuevo contenido aca con base en busquedas en internet-->
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Como crítica gastronomica tengo que siempre visitar vários restorenes. As veces son grandes, pero casi siempre son negocios pequeños que estan buscando su lugar en un mercado muy concurrido.
+                    Por eso trato de ser lo mas professional posible para evaluar como corresponde el local.
                 </p>
             </div>
             <div class="col-12 col-md-4">
